[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waddleml"
version = "0.2.0"
description = "Local Weights & Biases — git-native ML experiment tracker with DuckDB."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Brian Guarraci" },
]
keywords = [
    "machine-learning",
    "experiment-tracking",
    "mlops",
    "duckdb",
    "wandb",
    "weights-and-biases",
    "dashboard",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "duckdb>=0.9.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
system = ["psutil>=5.9.0"]
gpu = ["pynvml>=11.5.0"]
all = ["psutil>=5.9.0", "pynvml>=11.5.0"]

[project.scripts]
waddle = "waddle.cli:main"

[project.urls]
Homepage = "https://github.com/briangu/waddleml"
Repository = "https://github.com/briangu/waddleml"
Issues = "https://github.com/briangu/waddleml/issues"

[tool.setuptools.packages.find]
include = ["waddle", "waddle.*"]

[tool.setuptools.package-data]
waddle = ["static/*"]
